Movement and new images

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -2,3 +2,10 @@
 /10OC.png
 /10C.png
 /AOD.png
+/ClubsFoundation.png
+/DiamondsFoundation.png
+/HeartFoundation.png
+/SpadesFoundation.png
+/F.png
+/e.png
+/r.png
